<resources>
    <string name="app_name">Warest</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">splashActivity</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email-id</string>
    <string name="hint_password">Password</string>
    <string name="hint_contact">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign up</string>
    <string-array name="type_of_login">
        <item>Student</item>
        <item>Faculty</item>
        <item>Institute</item>
        <item>Corporate</item>
        <item>Admin</item>
    </string-array>
    <string-array name="type_of_signup">
        <item>Student</item>
        <item>Faculty</item>
        <item>Institute</item>
        <item>Corporate</item>
    </string-array>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_home">NavigationViewActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_workshops">WorkshopsActivity</string>
    <string name="title_activity_webinars">WebinarsActivity</string>
    <string name="title_activity_conferences">ConferencesActivity</string>
    <string name="title_activity_online_courses">Online_coursesActivity</string>
    <string name="title_activity_student_training">StudentTrainingActivity</string>
    <string name="title_activity_faculty_training">FacultyTrainingActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_upcoming_events">UpcomingEventsActivity</string>
    <string name="action_signout">Signout</string>
    <string name="hint_name">Name</string>
    <string name="about_warest">About Warest</string>
    <string name="mission_title">Mission</string>
    <string name="values_title">Values</string>
    <string name="title_fullform">Wisdom Association of Research in Engineering, Science and Technology</string>
    <string name="events">%s\n\n%s\n\n%s</string>
    <string name="add_event">Add Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="event_name">Enter Event Name</string>
    <string name="event_details">Enter Event details</string>
    <string name="event_date">Enter date</string>
    <string name="workshop_name">Enter Workshop Name</string>
    <string name="workshop_details">Enter Workshop details</string>
    <string name="workshop_date">Enter date</string>
    <string name="conference_name">Enter Event Name</string>
    <string name="conference_details">Enter Event details</string>
    <string name="conference_date">Enter date</string>
    <string name="webinar_name">Enter Webinar Name</string>
    <string name="webinar_details">Enter Webinar details</string>
    <string name="webinar_date">Enter date</string>
    <string name="online_course_name">Enter Online course Name</string>
    <string name="online_course_details">Enter Online course details</string>
    <string name="online_course_date">Enter date</string>
    <string name="submit_event">Add</string>
    <string name="add_workshop">Add Workshop</string>
    <string name="add_conference">Add Conference</string>
    <string name="add_webinar">Add Webinar</string>
    <string name="add_online_course">Add Online Course</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
</resources>
