<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sumanth.warest.FragmentAddEvent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <EditText
        android:id="@+id/event_name"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"
        android:padding="10dp"
        android:background="@android:color/white"
        android:textColorHint="@android:color/darker_gray"/>
    <EditText
        android:id="@+id/event_details"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_details"
        android:padding="10dp"
        android:background="@android:color/white"
        android:textColorHint="@android:color/darker_gray"/>
    <EditText
        android:id="@+id/event_date"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_date"
        android:padding="10dp"
        android:inputType="date"
        android:background="@android:color/white"
        android:textColorHint="@android:color/darker_gray"/>
    <Button
        android:id="@+id/submit"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit_event"/>
    </LinearLayout>

</FrameLayout>
