<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sumanth.warest.FragmentAbout">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fullform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_fullform"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <ImageView
        android:layout_below="@+id/fullform"
        android:id="@+id/image_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/about"
        />
    <TextView
        android:layout_below="@+id/image_about"
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_below="@+id/about"
        android:id="@+id/about_warest_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_warest"
        android:textStyle="bold"
        android:textSize="30sp"/>
    <TextView
        android:layout_below="@+id/about_warest_title"
        android:id="@+id/about_warest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>
    <TextView
        android:layout_below="@+id/about_warest"
        android:id="@+id/mission_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mission_title"
        android:textStyle="bold"
        android:textSize="30sp"/>
    <TextView
        android:layout_below="@+id/mission_title"
        android:id="@+id/mission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    <TextView
        android:layout_below="@+id/mission"
        android:id="@+id/values_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/values_title"
        android:textStyle="bold"
        android:textSize="30sp"/>
    <TextView
        android:layout_below="@+id/values_title"
        android:id="@+id/values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
        </RelativeLayout>
    </ScrollView>
</FrameLayout>
