<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorOfficial"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sumanth.warest.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="WAREST"
            android:textSize="70dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/title"
            android:padding="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_username"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <android.support.v7.widget.AppCompatSpinner
            android:background="@color/white"
            android:id="@+id/dropdown"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/type_of_login"
            android:padding="10dp"
            android:layout_marginBottom="10dp"></android.support.v7.widget.AppCompatSpinner>
        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_btn_join"
            android:text="@string/btn_login"
            android:textColor="@color/black"/>

        <!-- Link to Login Screen -->
        <TextView
            android:id="@+id/signup_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an accout?Register here"
            android:textSize="25dp"/>



    </LinearLayout>

</LinearLayout>